[package]
name = "toycc"
version = "0.1.0"
authors = ["Christian De la Hoz <christian.hoz@anixe.pl>"]
edition = "2018"

[lib]
name = "toycc"
path = "src/lib.rs"

[[bin]]
name = "toycc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
